[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "timetool"
version = "1!0.0.1761810023"
description = "Common time related functions"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/timetool"

[project.scripts]
timetool = "timetool.timetool:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
timetool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["asserttool>=1!0.0.1761250315", "click-auto-help>=0.0.1761041641", "clicktool>=1!0.0.1761810015", "dateparser", "eprint>=1!0.0.1761259337", "globalverbose>=0.0.1761031290", "humanize", "mptool>=0.0.1761032167", "timestamptool>=1!0.0.1761254967", "unmp>=1!0.0.1761810019"]
dependencies-git = [
	"asserttool @ git+https://github.com/jakeogh/asserttool", 
	"click-auto-help @ git+https://github.com/jakeogh/click-auto-help", 
	"clicktool @ git+https://github.com/jakeogh/clicktool", 
	"dateparser", 
	"eprint @ git+https://github.com/jakeogh/eprint", 
	"globalverbose @ git+https://github.com/jakeogh/globalverbose", 
	"humanize", 
	"mptool @ git+https://github.com/jakeogh/mptool", 
	"timestamptool @ git+https://github.com/jakeogh/timestamptool", 
	"unmp @ git+https://github.com/jakeogh/unmp"
]
index-urls = ["jakeogh.github.io", "pip-index"]
